k8s/base/misskey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: misskey
  namespace: misskey
  labels:
    app: misskey
spec:
  type: ClusterIP
  selector:
    app: misskey
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
