k8s/base/misskey/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: misskey
  namespace: misskey
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example.tld
      secretName: misskey-tls
  rules:
    - host: example.tld
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: misskey
                port:
                  number: 3000
